[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Textures/chasingStarTexture.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ChasingStar/chasingStar.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/arrowTexture.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 95.0988

[node name="chasingStar" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="chasingStarSprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="chasingStarCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="arrowNode" type="Node2D" parent="."]

[node name="arrowSprite" type="Sprite" parent="arrowNode"]
position = Vector2( 140, 0 )
rotation = 4.71239
scale = Vector2( 0.62, 0.62 )
texture = ExtResource( 3 )

[node name="arrowTween" type="Tween" parent="."]

[node name="generalTween" type="Tween" parent="."]
